refactor(config): modularize ReinsConfig into dedicated settings domain objects